# pumpference

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENCE.md  Makefile  README.md  pyproject.toml
.cursor/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
.cursor/rules/: memory-bank.mdc
scripts/: plot_gpu_baseline.py
src/pumpference/: __init__.py  __main__.py  benchmark.py  generate.py  model.py  profile.py  quantize.py  tokenizer.py
tests/: test_model.py  test_quantize.py  test_sampling.py  test_speculative.py
tutorials/: 01-generation.md  02-sampling.md  03-benchmarking.md  04-kv-cache.md  05-profiling.md  06-quantization.md  06b-awq-quantization.md  07-flash-attention.md  08-speculative-decoding.md
